# RVC_OOAD

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.cursor/rules/: change-tracking.mdc  cpp-rules.mdc
.cursor/skills/skill-database/: SKILL.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/: rvc_controller_app.cpp
docs/elaboration/: use-case-details.md
docs/elaboration/diagrams/: ood-class-diagram.puml  ood-sequence-dust-power-up.puml  ood-sequence-obstacle-avoidance.puml  ood-sequence-start-stop.puml  system-operation-contracts.puml
docs/inception/: requirements.md
docs/inception/diagrams/: domain-model.puml  ssd-dust-power-up.puml  ssd-obstacle-avoidance.puml  ssd-start-stop.puml  use-case-diagram.puml
docs/jira/: initial-requirements-import.csv  requirements-management.md
docs/reports/: changelog.md  fr-traceability-matrix-uc001.puml  fr-traceability-matrix-uc002.puml  fr-traceability-matrix-uc003.puml  fr-traceability-matrix-uc004.puml  fr-traceability-matrix.puml  quality-workflow.md
include/rvc/: RvcController.h
simulator/: RvcSimulatorBridge.cpp  RvcSimulatorBridge.h  rvc_client.py  simulator_ui.py
simulator/maps/: sample_map.json
src/: RvcController.cpp
system_tests/: run_system_tests.py
system_tests/cases/: dust_interrupted_by_obstacle.json  dust_power_up_timeout.json  obstacle_both_blocked.json  obstacle_left_clear.json  power_on_clean.json
system_tests/maps/: dust_path.json  obstacle_box.json  straight_cleaning.json
system_tests/suites/: rvc_30_system_tests.json
tests/: CMakeLists.txt  FakePorts.h  RvcControllerTest.cpp
